[project]
name = "camminady_altair_theme"
version = "0.1.0"
description = ""
authors = [
    { name = "Thomas Camminady", email = "0milieux_member@icloud.com" }
]
readme = "README.md"
repository = "https://github.com/thomascamminady/camminady_altair_theme"
homepage = "https://github.com/thomascamminady/camminady_altair_theme"
documentation = "https://thomascamminady.github.io/camminady_altair_theme"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "regex>=2024.11.6",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
    "vega-datasets>=0.9.0",
    "vl-convert-python>=1.9.0.post1",
]
docs = [
    "pdoc>=14.0.0",
]

[project.entry-points.'altair.vegalite.v6.theme']
camminady = "camminady_altair_theme.theme:camminady"


[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]
